--- a/app/src/main/res/layout/my_listview_details.xml
+++ b/app/src/main/res/layout/my_listview_details.xml
@@ -4,37 +4,48 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <androidx.gridlayout.widget.GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:id="@+id/gravity"
+        android:layout_width="101dp"
+        android:layout_height="235dp"
+        android:foregroundGravity="center_vertical|center|center_horizontal">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             app:srcCompat="@mipmap/ic_launcher_round" />
 
         <TextView
             android:id="@+id/descriptionTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="51dp"
+            android:layout_width="match_parent"
+            android:layout_height="33dp"
             android:layout_weight="1"
-            android:text="Description" />
+            android:gravity="center"
+            android:text="Description"
+            app:layout_column="0"
+            app:layout_row="2" />
 
         <TextView
             android:id="@+id/priceTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="center"
             android:text="Price"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            app:layout_column="0"
+            app:layout_row="1" />
 
         <TextView
             android:id="@+id/nameTextVIew"
-            android:layout_width="wrap_content"
-            android:layout_height="61dp"
+            android:layout_width="101dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:foregroundGravity="center"
+            android:gravity="center|center_horizontal|center_vertical"
             android:text="Name"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            app:layout_column="0"
+            app:layout_row="3" />
     </androidx.gridlayout.widget.GridLayout>
 </RelativeLayout>
